package sys;
import "sys/Common.proto";

option java_package = "nirvana.hall.protocol.sys";

option java_outer_classname = "DictTreeProto";

//获取字典列表请求
message DictTreeRequest {
  enum DictType{
    AREA = 1;//行政区划
    DEPART = 2;//部门

  }
  extend BaseRequest {
    optional DictTreeRequest cmd = 111;
  }
  required DictType dictType = 1;
  optional string code = 2;
  //optional string name = 3;
}
//获取字典列表的响应
message DictTreeResponse {
  extend BaseResponse {
    optional DictTreeResponse cmd = 111;
  }
  message Dict {
    required string code = 1;
    required string name = 2;
  }
  repeated Dict dict_list = 1;
}
